# stop_signal_nested_memory_highload_analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: raw_data
notebooks/: analysis_notebook.ipynb  bissett2019_figure_recreations.ipynb  compute_bic_values.py  excluded_subjects_diagnostic.ipynb  exploratory_visualization.ipynb  letter_carryover_analysis.ipynb  results_figure_notebook.ipynb  results_writeup.md  visualization_notebook.ipynb
notebooks/deprec/: analysis_notebook_e3fix.ipynb  exploratory_visualization_e3fix.ipynb  figure_drafting_notebook.html  figure_drafting_notebook.ipynb  results_figure_notebook_e3fix.ipynb  visualization_notebook_e3fix.ipynb
src/stop_wm/: __init__.py  approved.py  bic_bayes.py  calculate_binomial_thresholds.py  clean_shape.py  config.py  create_post_qc_datasets.py  data_overview_figure.py  exclusion_criteria.txt  flag_to_exclude.py  race_model_check.py  serverExperimentalData.py  subjectwise_metrics.py  unpack_battery.py  utils.py  within_subject_ci.py
tests/: test_bic_bayes.py  test_clean_shape.py  test_config.py  test_race_model_check.py  test_serverExperimentalData.py  test_within_subject_ci.py
